# wasm-lz77

./: Cargo.toml  README.md  index.html  serve.py
pkg/: lz77.d.ts  lz77.js  lz77_bg.wasm  lz77_bg.wasm.d.ts
src/: lib.rs  lz77.rs  main.rs
src/lz77/: decode.rs  encode.rs
www/: index.js  js77.js
