[package]
name = "lz77"
version = "0.1.0"
authors = ["Angelo Rendina <angelo.rendina91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
